# matrix

./: Cargo.toml  README.md
src/: lib.rs  matrix.rs  slice.rs  slicemut.rs
