[package]
name = "matrix"
version = "0.1.0"
edition = "2021"
description = "A simple generic matrix library"
license = "MIT"
repository = "https://github.com/cosmobobak/matrix"
keywords = ["matrix"]
categories = ["data-structures"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
